--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
@@ -13,13 +13,13 @@
 </head>
 <body>
   <div class="equilibrium">
-  <img class="first-photo" src="/images/image-equilibrium.jpg"  alt="">
+  <img class="first-photo" src="image-equilibrium.jpg"  alt="">
   <h2>Equilibrium #3429</h2>
   <p>Our Equilibrium collection promotes balance and calm.</p>
   <h3>0.041 ETH</h3>
   <h4><i class="fas fa-clock"> 3 days left</i></h4>
   <hr>
-  <img class="second-photo" src="/images/image-avatar.png" alt="">
+  <img class="second-photo" src="image-avatar.png" alt="">
   <p>Creation of <span>Jules Wyvern</span></p>
   </div>
   <div class="attribution">
